--- a/tsconfig.json
+++ b/tsconfig.json
@@ -3,17 +3,14 @@
     "strict": true,
     "moduleResolution": "node",
     "resolveJsonModule": true,
-    "lib": [
-      "dom",
-      "es2015"
-    ],
-    "types": [
-      "cypress",
-      "chai"
-    ],
-    "typeRoots": [
-      "node_modules/@types"
-    ],
-    "target": "es5"
+    "lib": ["dom", "es2015"],
+    "types": ["jest", "cypress"],
+    "typeRoots": ["node_modules/@types"],
+    "target": "es5",
+    "skipLibCheck": true,
+    "paths": {
+      "chai": ["./noop.d.ts"]
+    },
+    "baseUrl": "../node_modules"
   }
 }
