--- a/package.json
+++ b/package.json
@@ -7,11 +7,12 @@
     "cypress": "4.3.0",
     "cypress-jest-adapter": "0.1.1",
     "rimraf": "3.0.2",
+    "ts-loader": "6.2.2",
     "typescript": "3.8.3"
   },
   "description": "Cypress end-to-end test automation boilerplate. Using TypeScript, Jest and Expect.",
   "devDependencies": {
-    "@types/jest": "25.2.1",
+    "@types/jest": "25.2.7",
     "eslint-plugin-cypress": "2.10.3",
     "husky": "4.2.3",
     "lint-staged": "10.1.1",
