--- a/tsconfig.json
+++ b/tsconfig.json
@@ -3,13 +3,23 @@
     "strict": true,
     "moduleResolution": "node",
     "resolveJsonModule": true,
-    "lib": ["dom", "es2015"],
-    "types": ["jest", "cypress"],
-    "typeRoots": ["node_modules/@types"],
+    "lib": [
+      "dom",
+      "es2015"
+    ],
+    "types": [
+      "jest",
+      "cypress"
+    ],
+    "typeRoots": [
+      "node_modules/@types"
+    ],
     "target": "es5",
     "skipLibCheck": true,
     "paths": {
-      "chai": ["./noop.d.ts"]
+      "chai": [
+        "./noop.d.ts"
+      ]
     },
     "baseUrl": "../node_modules"
   }
