--- a/package.json
+++ b/package.json
@@ -7,12 +7,13 @@
     "cypress": "4.5.0",
     "cypress-jest-adapter": "0.1.1",
     "rimraf": "3.0.2",
+    "tsify": "4.0.1",
     "typescript": "3.9.2"
   },
   "description": "Cypress end-to-end test automation boilerplate. Using TypeScript, Jest and Expect.",
   "devDependencies": {
+    "@types/cypress-cucumber-preprocessor": "1.14.1",
     "@types/jest": "25.2.2",
-    "eslint-plugin-cypress": "2.10.3",
     "husky": "4.2.5",
     "lint-staged": "10.2.2",
     "prettier": "2.0.4",
