--- a/package.json
+++ b/package.json
@@ -28,15 +28,16 @@
     }
   },
   "keywords": [
-    "boilerplate",
     "cypress",
+    "expect",
+    "jest",
+    "typescript",
     "e2e",
     "e2e tests",
-    "example",
-    "expect",
+    "boilerplate",
     "integration test",
-    "jest",
-    "typescript"
+    "test automation",
+    "javascript"
   ],
   "license": "MIT",
   "lint-staged": {
