--- a/package.json
+++ b/package.json
@@ -29,6 +29,9 @@
   },
   "keywords": [
     "cypress",
+    "cypress automation",
+    "cypress boilerplate",
+    "cypress example",
     "expect",
     "jest",
     "typescript",
